<resources>
    <string name="google_maps_key">AIzaSyDXVJFixkh_Nn1LJJAsxbOksr3jmDjluh0</string>
    <string name="app_name">ECOSEES</string>
    <string name="login">Log in</string>
    <string name="sign_up">Sign Up</string>
    <string name="welcome">Welcome To EcoSees</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forget_password">forget password?</string>
    <string name="dont_have_account">Don’t have account?</string>
    <string name="create_an_account">Create an account</string>
    <string name="facebook">continue with Facebook</string>
    <string name="google"> Continue With Google</string>
    <string name="or">OR</string>
    <string name="location">Select your location</string>
    <string name="give_location">to give you all information about seas in your location </string>
    <string name="hint_location">Enter your location</string>
    <string name="user_name">User name</string>
    <string name="verify_the_password">Verify the Password</string>
    <string name="already_have_account">Already have account?</string>
    <string name="email_password_wrong">Email or Password are wrong, please enter them again</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="water">Water Of Source</string>
    <string name="welcomex">welcome</string>
    <string name="name">John smith</string>
    <string name="search_hint">Search</string>
    <string name="start_location">Start now</string>
    <string name="information">Lorem Ipsum is simply dummy text ofthe printing and Lorem Lorem Ipsum is simply Ipsum is simply dummy text of the printing and Lorem Ipsum is simply dummy text of </string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="user_email">Johnsmith@gmail.com</string>
    <string name="settings">Settings</string>
    <string name="change_location">Change location</string>
    <string name="logout">logout</string>
    <string name="add_account"> Add account</string>
    <string name="choose">Choose Type</string>
    <string name="join_our_community">Join Our Community</string>
    <string name="join_group">Join group</string>
    <string name="tv_edit_name">Edit your name</string>
    <string name="change">Change</string>
    <string name="delete">Delete</string>
    <string name="save">Save</string>
    <string name="game_name">Ecoseas game</string>
    <string name="level1">Level 1</string>
    <string name="level2">Level 2</string>
    <string name="level3">Level 3</string>
    <string name="level4">Level 4</string>
    <string name="name_of_animal">The name of this animal is...</string>
    <string name="try_again">Try again</string>
    <string name="Sea_Turtle">Despite the fact that sea turtles have been living on earth for 200 million years, witnessed the extinction of many animals, and seemed tolerant and adaptable to extreme climate changes, only recently a huge decline in their numbers and gatherings has been noticed around the globe due to one main weak point they have: nesting on sandy beaches.</string>
    <string name="Dugong">The dugong, which is commonly known in Egypt as “mermaid” and sometimes “sea cow”, is one of the most endangered marine species worldwide due to the loss of seagrass habitat because of coastal development and sea pollution</string>
    <string name="Whale_Shark">Whale sharks, commonly known as “Bahloul” by local fishermen, are the largest known extant fish species. The largest confirmed whale shark had a length of 12.65m (41.5 ft) and a weight of about 21.5 tons (47,000 lb), while its height commonly ranges between five to 10 metres.</string>
    <string name="Blue_Fin">Bluefin tuna is a type of large fish that lives in the oceans. It is considered one of the most expensive types of fish in the world, with its price reaching hundreds of thousands of dollars. These fish are distinguished by their huge, pointed body and beautiful blue fins.</string>
    <string name="Manta_Ray">The manta, or virginia , is a large fish species that lives in warm salt water. She is distinguished by her large body, delicate thighs, and wide mouth. This species is known to live in tropical and subtropical oceans and seas around the world. One of the main attractions for diving enthusiasts is the prohibition of hunting it, as it generates economic income for Egypt to attract tourists. Workers in maritime activities and the environmental sector have been warned against touching the devil fish during diving, as it can cause skin injuries. There are seven families of this fish, comprising 70 species ranging in size from the size of a hand to up to ten meters in length and width, excluding the tail. It is a cartilaginous fish related to sharks, with eyes on top of the head fused with the body. Its mouth and gill covers are on the underside, except for the giant manta ray, whose mouth is at the front and always open. The weight of the manta ray reaches about 1400 kilograms, and its lifespan can reach around 20 years.</string>
    <string name="European_Eel">The European Eel is also considered endangered. Overfishing, habitat degradation, and barriers to migration are some of the challenges it faces.</string>
    <string name="Mediterranean">This mammal is listed as endangered. Factors like habitat disturbance, pollution, and human activities pose significant threats to its survival</string>
    <string name="Sturgeon">Russian Sturgeon, a fish species, is also endangered. Overfishing and habitat degradation are major factors contributing to its decline.</string>
    <string name="Sea_Cucumber">Sea Cucumber ::A sea cucumber is a marine animal that resembles a cucumber in shape, and belongs to the phylum Echinodermata. Sea cucumber contains a high percentage of protein, ranging from 41-63% of protein, and is a good source of collagen and antioxidants. Sea cucumber can be used in Asian dishes, because it has a large number of health benefits</string>
    <string name="Mangrove_Tress">Mangrove trees:In Egypt, the area of mangrove forests is about 5 kilometers, which is equivalent to 1,500 acres, according to Dr. Sayed Khalifa, head of the Egyptian Agricultural Syndicate, and the director of this project in which several Egyptian government agencies are participating. He described these trees as “natural barriers” to protect the shores of the Red Sea, which is not the case. It is found on the shores of the Mediterranean, for example, so the government is forced to make cement blocks to combat rising sea levels and protect cities.</string>
    <string name="Manate">It is a type of herbivorous marine mammal, and it was given this name because it is slow-moving, eats and is peaceful. It often feeds on aquatic plants and is very similar to cows on land. The sea cow reaches a length of about 4 meters, weighs about 590 kg, and has fins similar to rackets. The sea cow has a large, flexible upper lip that it uses to collect and eat food and to interact and communicate with members of its species. Sea cows prefer to live alone, as they spend half their day sleeping underwater, but they come to the surface to be exposed to the air</string>
    <string name="Sawfish">The scientific name for sawfish is (pristis), which is classified within the order of sharks. It is also known by another name, which is carpenter sharks. The length of these fish ranges from three to five meters, and their body also takes a concave shape. These fish are called sawfish; As a result of the presence of a bony saw, up to 125 cm long, at the beginning of the mouth, this saw is tapered in shape and contains very sharp teeth. The sawfish has pectoral fins, which are located far from the mouth area.</string>
    <string name="Native_Fish">Egypt is not only lined with coasts along the Mediterranean and Red Seas, but it also holds one of the largest rivers in the world, the Nile River. These bodies of water are all rich in underwater life, attracting many anglers to the area.</string>
    <string name="Lion_Fish">The lionfish is a carnivorous fish native to the Indo-Pacific region but has become an invasive species in the Atlantic Ocean. Lionfish are known for their distinctive physical characteristics, including brown or maroon stripes, fleshy tentacles, and long dorsal spines. They pose a threat to reef ecosystems as they compete for food and space with native species. Researchers have found that a single lionfish residing on a coral reef can reduce the recruitment of native reef fish by 79% , Lionfish reproduce all year and can release millions of eggs annually . Although lionfish are not currently listed as threatened or endangered in their native range, the increase in pollution in coral reefs may impact their population.</string>
    <string name="Hippopotamus">Hippopotamuses, including the common hippo and the pygmy hippo, are facing extinction. The common hippo is listed as Vulnerable, while the pygmy hippo is classified as Endangered. These species are threatened by widespread poaching for meat and ivory, as well as human encroachment on their habitats. In fact, hippos have already gone regionally extinct in three African countries. The global population estimate for hippos is around 115,000-130,000 individuals, with the largest populations found in eastern and southern Africa  </string>
    <string name="First_Advice">Practice efficient swimming techniques: Swimmers can focus on improving their technique to minimize unnecessary splashing and excessive water displacement, which can lead to water loss.</string>
    <string name="Second_Advice">When sunscreen dissolves in water, it causes pollution due to the disintegration of the organic materials inside it, which causes fish poisoning.</string>
    <string name="Third_Advice">Practice responsible fishing techniques: When angling, be mindful of the impact you have on aquatic ecosystems. Handle fish with care, use proper catch-and-release techniques, and avoid unnecessary harm to fish and their habitats. </string>
    <string name="Fourth_Advice">Learn about fish and aquatic ecosystems: Educate yourself about the different fish species, their habitats, and their conservation needs. Understanding the intricacies of aquatic ecosystems will enable you to make informed decisions that promote their preservation </string>
    <string name="Fifth_Advice">Use water-efficient equipment: Opt for water-efficient fishing gear and equipment. For example, use low-flow hoses or spray nozzles when cleaning fishing equipment to minimize water wastage</string>
    <string name="The_Mediterranean_Sea">While seawater contains - on average - about 35 grams of salt per liter, the oceans and seas are not uniformly salty in general. The closer you are to the poles, the less salinity of the water, as fresh water released from the ice of the frozen poles dilutes the salt concentration. Seawater The average pollution decreases as we move towards European countries, and it decreases in the Arab world</string>
    <string name="The_Red_Sea">The Red Sea is the saltiest open sea due to the high rate of evaporation and low rainfall. There are isolated seas that contain high levels of salinity, such as the Dead Sea. It is characterized by extremely pure water, which amazes the world.</string>
    <string name="The_Nile_Rive">Nile pollution is one of the most serious issues hindering Egypts development. According to recent studies conducted by the Egyptian Environmental Affairs Agency, the Nile River and its branches in the governorates suffer from a severe pollution problem, as approximately 4 billion cubic meters annually of agricultural and industrial waste containing acids, organic materials, pesticides, agricultural pesticides, and heavy metals are discharged into bodies of water</string>
</resources>