<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_columnWeight="2"
    android:background="@drawable/complete_back"
    tools:context=".MainActivity">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="80dp"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="36dp"
                android:text="@string/welcome"
                android:textColor="@color/white"
                android:textSize="32sp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="@dimen/mar_rig_lift"
                android:layout_marginRight="@dimen/mar_rig_lift"
                android:layout_marginBottom="32dp"
                android:background="@drawable/custom_btn_log"
                android:text="@string/login"
                android:textColor="@color/blueDark"
                android:textSize="28sp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@id/btn_signup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="@dimen/mar_rig_lift"
                android:layout_marginRight="@dimen/mar_rig_lift"
                android:background="@drawable/custom_btn_sign"
                android:text="@string/sign_up"
                android:textColor="@color/whiteD"
                android:textSize="28sp" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>