<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".sign_up_screen">
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_signup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:text="@string/sign_up"
            android:textColor="@color/text_color"
            android:textSize="40sp"
            android:textStyle="bold" />


        <TextView
            android:id="@+id/tv_user_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="28dp"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="15dp"
            android:drawableStart="@drawable/user_name"
            android:drawablePadding="15dp"
            android:text="@string/user_name"
            android:textColor="@color/text_color"
            android:textSize="@dimen/text_size_big"
            android:textStyle="bold" />


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp">

            <EditText
                android:id="@+id/et_user_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edit_text"
                android:inputType="textEmailAddress" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/s_tv_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="28dp"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="15dp"
            android:drawableStart="@drawable/email"
            android:drawablePadding="15dp"
            android:text="@string/email"
            android:textColor="@color/text_color"
            android:textSize="@dimen/text_size_big"
            android:textStyle="bold" />


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp">

            <EditText
                android:id="@+id/s_et_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edit_text"
                android:inputType="textEmailAddress" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/s_tv_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="28dp"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="15dp"
            android:drawableStart="@drawable/password"
            android:drawablePadding="15dp"
            android:text="@string/password"
            android:textColor="@color/text_color"
            android:textSize="@dimen/text_size_big"
            android:textStyle="bold" />


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/black">

            <EditText
                android:id="@+id/s_et_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edit_text"
                android:inputType="textPassword" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/tv_verify_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="28dp"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="15dp"
            android:drawableStart="@drawable/password"
            android:drawablePadding="15dp"
            android:text="@string/verify_the_password"
            android:textColor="@color/text_color"
            android:textSize="@dimen/text_size_big"
            android:textStyle="bold" />


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/black">

            <EditText
                android:id="@+id/et_verify_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edit_text"
                android:inputType="textPassword" />

        </com.google.android.material.textfield.TextInputLayout>


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_signup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/mar_rig_lift"
            android:layout_marginTop="40dp"
            android:layout_marginRight="@dimen/mar_rig_lift"
            android:background="@drawable/btn_login"
            android:text="@string/sign_up"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="28sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/already_have_account"
                android:textColor="@color/text_color"
                android:textSize="@dimen/text_size_small"
                />

            <TextView
                android:id="@+id/s_tv_login"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="@color/white"
                android:text="@string/login"
                android:textAllCaps="false"
                android:textColor="@color/text_color"
                android:textSize="@dimen/text_size_small"
                />


        </LinearLayout>
    </LinearLayout>
</RelativeLayout>
</ScrollView>